# MOO_Uniform_PF

./: Policy_update_DST_with_baseline.ipynb  README.md  uniform_PF.ipynb
DST/: Policy_update_DST_with_baseline.ipynb
Fishwood/: Policy_update_Fishwood_with_baseline.ipynb
LLM_FT/: cdf_refinement_skill_doc.md  cursor_llm_cdf_implementation_plan.md
LLM_alignment/: pyproject.toml  setup.py  train.sh
LLM_alignment/configs/: base.yaml
LLM_alignment/configs/cdf/: default.yaml
LLM_alignment/configs/eval/: default.yaml
LLM_alignment/configs/model/: qwen_0p5b_dora.yaml
LLM_alignment/configs/rl/: ppo.yaml  reinforce.yaml
LLM_alignment/configs/task/: reddit_summarization.yaml
LLM_alignment/configs/train/: cdf_refinement.yaml  cdf_refinement_surrogate.yaml  cdf_refinement_surrogate_start4.yaml  ls_uniform.yaml  ls_uniform_nonendpoint_2epochs.yaml
LLM_alignment/llm_ft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LLM_alignment/qwen/: README.md  __init__.py  calculate_pf_history_n_metrics.py  cdf_refinement.py  equispace_weighting.py  evaluation.py  inference_rewardedsoups.py  recompute_pf_from_training_logs.py  soup.py  soup_endpoints_and_eval.py  train_ppo.py  train_reinforce.py
LLM_alignment/qwen/tasks/: __init__.py  summary.py
LLM_alignment/qwen/utils/: __init__.py  args_utils.py  cdf_utils.py  inference_utils.py  ppo_utils.py  qwen_utils.py  reinforce_utils.py  trl_compat.py
Mountaincar/: Policy_update_MountainCar_with_baseline.ipynb
