[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ft"
version = "0.2.0"
description = "Qwen PPO + Rewarded Soup (first milestone)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.11",
  "trl>=0.8",
  "datasets>=2.16",
  "accelerate>=0.26",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
